Use direct fields over array